Better Mobile Responsivity

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
               <div class="person-button">
                 <span class="person">Rico Coolio</span>
                 <button>TA BORT</button>
+                <img src="Assets/trash.svg" alt="Trash icon" class="trash-menu" />
               </div>
             </div>
           </article>
@@ -96,12 +97,13 @@
             </figure>
             <div class="card-details">
               <div class="title-date">
-                <h3>Gurka</h3>
-                <span class="date">15 april 2024</span>
+                <h3>Tomat</h3>
+                <span class="date">1 april 2024</span>
               </div>
               <div class="person-button">
-                <span class="person">Rico Coolio</span>
+                <span class="person">Jocke</span>
                 <button>TA BORT</button>
+                <img src="Assets/trash.svg" alt="Trash icon" class="trash-menu" />
               </div>
             </div>
           </article>
@@ -115,12 +117,13 @@
             </figure>
             <div class="card-details">
               <div class="title-date">
-                <h3>Gurka</h3>
-                <span class="date">15 april 2024</span>
+                <h3>Tomat</h3>
+                <span class="date">1 april 2024</span>
               </div>
               <div class="person-button">
-                <span class="person">Rico Coolio</span>
+                <span class="person">Majvor och P-Å</span>
                 <button>TA BORT</button>
+                <img src="Assets/trash.svg" alt="Trash icon" class="trash-menu" />
               </div>
             </div>
           </article>
@@ -134,12 +137,13 @@
             </figure>
             <div class="card-details">
               <div class="title-date">
-                <h3>Gurka</h3>
+                <h3>Sockerärtor</h3>
                 <span class="date">15 april 2024</span>
               </div>
               <div class="person-button">
-                <span class="person">Rico Coolio</span>
+                <span class="person">Frippe</span>
                 <button>TA BORT</button>
+                <img src="Assets/trash.svg" alt="Trash icon" class="trash-menu" />
               </div>
             </div>
           </article>
@@ -153,12 +157,13 @@
             </figure>
             <div class="card-details">
               <div class="title-date">
-                <h3>Gurka</h3>
-                <span class="date">15 april 2024</span>
+                <h3>Majrova</h3>
+                <span class="date">1 april 2024</span>
               </div>
               <div class="person-button">
-                <span class="person">Rico Coolio</span>
+                <span class="person">Emma på 4an</span>
                 <button>TA BORT</button>
+                <img src="Assets/trash.svg" alt="Trash icon" class="trash-menu" />
               </div>
             </div>
           </article>
@@ -172,12 +177,13 @@
             </figure>
             <div class="card-details">
               <div class="title-date">
-                <h3>Gurka</h3>
+                <h3>Squash</h3>
                 <span class="date">15 april 2024</span>
               </div>
               <div class="person-button">
-                <span class="person">Rico Coolio</span>
+                <span class="person">Perra J</span>
                 <button>TA BORT</button>
+                <img src="Assets/trash.svg" alt="Trash icon" class="trash-menu" />
               </div>
             </div>
           </article>
