--- a/page2.html
+++ b/page2.html
@@ -74,6 +74,7 @@
               <div class="person-button">
                 <span class="person">Rico Coolio</span>
                 <button>TA BORT</button>
+                <img src="Assets/trash.svg" alt="Trash icon" class="trash-menu" />
               </div>
             </div>
           </article>
@@ -98,6 +99,7 @@
               <div class="person-button">
                 <span class="person">Rico Coolio</span>
                 <button>TA BORT</button>
+                <img src="Assets/trash.svg" alt="Trash icon" class="trash-menu" />
               </div>
             </div>
           </article>
@@ -117,6 +119,7 @@
               <div class="person-button">
                 <span class="person">Rico Coolio</span>
                 <button>TA BORT</button>
+                <img src="Assets/trash.svg" alt="Trash icon" class="trash-menu" />
               </div>
             </div>
           </article>
